cosas que sobran

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 usuarios.db
+P2/salida.txt
+P2/descomprimido.txt
+P2/descompenc.txt
+P2/comprimidoenc.zlib
+P2/comprimido.zlib
+P2/ciphertext.enc
+P3/passwords.txt
+P3/usuarios.db
